@@ -1,4 +1,4 @@
-﻿-- create table
+-- create table
 CREATE TABLE knn_recheck_geom(gid serial primary key, geom geometry);
 INSERT INTO knn_recheck_geom(gid,geom)
 SELECT ROW_NUMBER() OVER(ORDER BY x,y) AS gid, ST_Point(x*0.777,y*0.887) As geom
@@ -227,3 +227,15 @@ FROM test_wo ORDER BY geo <->
 ('0101000020E610000092054CE0D6DDE5BFCDCCCCCCCCAC4A40'::geometry);
 DROP TABLE test_wo;
 set enable_seqscan to default;
+
+-- #5782
+CREATE TABLE t5782 ( l text, g geometry );
+INSERT INTO t5782 VALUES
+	('A', 'LINESTRING(18.00678831099686 69.0404811833497,18.006784630996860 69.04045431334970,18.00677727099686 69.0404005833497)'),
+	('B', 'LINESTRING(18.00677727099686 69.0404005833497,18.006780950996863 69.04042744334969,18.00678831099686 69.0404811833497)');
+CREATE INDEX ON t5782 USING GIST(g);
+ANALYZE t5782;
+SET enable_seqscan = false;
+SELECT '#5782', l FROM t5782 ORDER BY g <-> 'POINT(18.006691126034692 69.04048768506776)'::geometry;
+DROP TABLE t5782;
+SET enable_seqscan to default;
