@@ -7,6 +7,9 @@ PostGIS 3.4.4dev
   - #5785, [raster] ST_MapAlgebra segfaults when expression references
          a supernumerary rast argument (Dian M Fay)
 
+* Enhancements *
+
+  - #5782, Improve robustness of min distance calculation (Sandro Santilli)
 
 
 PostGIS 3.4.3
